tests/snapshots/formats__tga__colormap-ext.tga.snap
---
source: tests/formats.rs
expression: "common::explore(&name, &data)"
---
▾ colormap-ext.tga — 4×2, 8-bit, Color-mapped  [0x0+0x248]
  ▾ Header  [0x0+0x12]
      ID length: 9  [0x0+0x1]
      Color map type: 1  [0x1+0x1]
      Image type: Color-mapped (0x1)  [0x2+0x1]
      First color map entry: 0  [0x3+0x2]
      Color map length: 4  [0x5+0x2]
      Color map entry size: 24  [0x7+0x1]
      X origin: 0  [0x8+0x2]
      Y origin: 0  [0xa+0x2]
      Width: 4  [0xc+0x2]
      Height: 2  [0xe+0x2]
      Pixel depth: 8  [0x10+0x1]
      Image descriptor: 0x20 [TOP_LEFT] — 0 alpha bits  [0x11+0x1]
    Image ID: "fillyfoal"  [0x12+0x9]
  ▾ Color map — 4 colors  [0x1b+0xc]
      [0]: "#000000"  [0x1b+0x3]
      [1]: "#0000ff"  [0x1e+0x3]
      [2]: "#00ff00"  [0x21+0x3]
      [3]: "#ff0000"  [0x24+0x3]
    Image data — 2 rows  [0x27+0x8]
  ▾ Extension area  [0x33+0x1ef]
      Extension size: 495  [0x33+0x2]
      Author name: "Filly"  [0x35+0x29]
      Author comments: "comment"  [0x5e+0x144]
      Month: 10  [0x1a2+0x2]
      Day: 6  [0x1a4+0x2]
      Year: 2026  [0x1a6+0x2]
      Hour: 12  [0x1a8+0x2]
      Minute: 0  [0x1aa+0x2]
      Second: 0  [0x1ac+0x2]
      Job name: "job"  [0x1ae+0x29]
      Job hours: 1  [0x1d7+0x2]
      Job minutes: 2  [0x1d9+0x2]
      Job seconds: 3  [0x1db+0x2]
      Software ID: "gen_images.py"  [0x1dd+0x29]
      Software version: 101 — 1.01  [0x206+0x2]
      Software version letter: "a"  [0x208+0x1]
      Key color: 0x0  [0x209+0x4]
      Pixel aspect numerator: 1  [0x20d+0x2]
      Pixel aspect denominator: 1  [0x20f+0x2]
      Gamma numerator: 22  [0x211+0x2]
      Gamma denominator: 10  [0x213+0x2]
      Color correction offset: 0x0  [0x215+0x4]
      Postage stamp offset: 0x0  [0x219+0x4]
      Scan line table offset: 0x0  [0x21d+0x4]
      Attributes type: No alpha (0x0)  [0x221+0x1]
  ▾ Developer directory  [0x222+0x2]
      Tag count: 1  [0x222+0x2]
      Tag 7 — 4 bytes  [0x224+0xa] → 0x2f+0x4
  ▾ Footer  [0x22e+0x1a]
      Extension area offset: 0x33  [0x22e+0x4]
      Developer directory offset: 0x222  [0x232+0x4]
      Signature: "TRUEVISION-XFILE."  [0x236+0x12]
